<resources>
    <string name="app_name">Italo</string>

    <!-- Areas -->
    <string name="areasTitle">Areas del Club</string>

    <!-- Registrar invitado -->
    <string name="registrarInvitadoTitle">Registrar Invitado</string>

    <!-- Reservar Area -->
    <string name="cantidadInvitados">Cantidad Invitados:</string>

    <!-- Login -->
    <string name="lblOlvidemiclave">Olvide mi clave</string>
    <string name="btnIngresar">Ingresar</string>
    <string name="login_title">Iniciar Sesión</string>

    <!--Quienes Somos-->
    <string name="lblVision">VISIÓN</string>
    <string name="lblMision">MISIÓN</string>

    <!-- Contacto -->
    <string name="lblDireccionClub">DIRECCIÓN:</string>
    <string name="lblCorreoClub">CORREO ELECTRÓNICO:</string>
    <string name="lblRedesSocialesClub">REDES SOCIALES:</string>

    <integer-array name="google_colors">
        <item>@color/redcolor</item>
        <item>@color/Blue</item>
        <item>@color/yellowcolor</item>
        <item>@color/Purple</item>
    </integer-array>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="title_activity_splash">ItalSoft</string>

    <string name="action_settings">Settings</string>

    <!-- Titulo de tabs -->
    <string name="tab_name_1">Iniciar Sesión</string>
    <string name="tab_name_2">Noticias</string>
    <string name="tab_name_3">Instalaciones</string>
    <string name="tab_name_4">Servicios</string>
    <string name="tab_name_5">Quienes somos</string>
    <string name="tab_name_6">Contacto</string>
    <string name="tab_name_7">Enviar sugerencias</string>

    <!-- Vision -->
    <string name="vision_text">\   En el cerebro tiene lugar el complicado proceso de la percepción visual gracias al cual somos capaces de percibir la forma de los objetos, identificar distancias, detectar los colores y el movimiento.</string>
</resources>
