<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lblDireccionClub"
        android:id="@+id/lblDireccionClub"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:id="@+id/txtDireccionClub"
        android:text="INFORMACIÓN DE LA DIRECCION DEL CLUB ÍTALO VENEZOLANO"
        android:editable="false"
        android:layout_below="@+id/lblDireccionClub"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:focusable="false"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/lblCorreoClub"
        android:id="@+id/lblCorreoClub"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="20dp"
        android:layout_above="@+id/txtCorreoClub"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtCorreoClub"
        android:text="CORREO ELECTRÓNICO DEL CLUB"
        android:editable="false"
        android:focusable="false"
        android:layout_above="@+id/lblRedesSocialesClub"
        android:layout_alignRight="@+id/lblCorreoClub"
        android:layout_alignEnd="@+id/lblCorreoClub" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lblRedesSocialesClub"
        android:id="@+id/lblRedesSocialesClub"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="20dp"
        android:layout_above="@+id/txtFacebookClub"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:background="@drawable/facebook"
        android:layout_alignTop="@+id/txtFacebookClub"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtFacebookClub"
        android:text="FACEBOOK.COM"
        android:editable="false"
        android:focusable="false"
        android:layout_above="@+id/txtPaginaWebClub"
        android:layout_alignLeft="@+id/lblCorreoClub"
        android:layout_alignStart="@+id/lblCorreoClub"
        android:layout_alignRight="@+id/lblCorreoClub"
        android:layout_alignEnd="@+id/lblCorreoClub" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView2"
        android:background="@drawable/rss"
        android:layout_alignTop="@+id/txtPaginaWebClub"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtPaginaWebClub"
        android:text="ITALSOFT-CLUBITALO.COM"
        android:editable="false"
        android:focusable="false"
        android:layout_above="@+id/txtTwitterClub"
        android:layout_alignLeft="@+id/txtFacebookClub"
        android:layout_alignStart="@+id/txtFacebookClub" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView3"
        android:background="@drawable/twitter"
        android:layout_alignTop="@+id/txtTwitterClub"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtTwitterClub"
        android:text="TWITTER.COM"
        android:editable="false"
        android:focusable="false"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/txtPaginaWebClub"
        android:layout_alignStart="@+id/txtPaginaWebClub"
        android:layout_alignRight="@+id/txtPaginaWebClub"
        android:layout_alignEnd="@+id/txtPaginaWebClub" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="VER MAPA>>"
        android:id="@+id/textView"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="20dp"
        android:layout_below="@+id/txtDireccionClub"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="TELEFONO"
        android:id="@+id/textView3"
        android:textStyle="bold"
        android:textColor="#000000"
        android:textSize="20dp"
        android:layout_marginTop="53dp"
        android:layout_below="@+id/textView"
        android:layout_alignRight="@+id/lblDireccionClub"
        android:layout_alignEnd="@+id/lblDireccionClub" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText9"
        android:text="0251-2909031"
        android:editable="false"
        android:focusable="false"
        android:layout_alignBottom="@+id/imageView4"
        android:layout_toRightOf="@+id/imageView4"
        android:layout_toEndOf="@+id/imageView4" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView4"
        android:background="@drawable/facebook"
        android:layout_below="@+id/textView3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />




</RelativeLayout>